--- a/hotelex/assets/html/dados_propri.html
+++ b/hotelex/assets/html/dados_propri.html
@@ -131,6 +131,17 @@
           </div>
         </div>
       </div>
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+          // Aguarda o carregamento completo do DOM
+          var botaoCadastrar = document.querySelector('.submitex');
+      
+          botaoCadastrar.addEventListener('click', function () {
+            // Quando o botão for clicado, redirecione para a outra página
+            window.location.href = 'pagamentex.html';
+          });
+        });
+      </script>
       <script src="../js/dados_propri.js"></script>
     </div>
   </form>
