--- a/hotelex/assets/html/anuncia.html
+++ b/hotelex/assets/html/anuncia.html
@@ -64,7 +64,7 @@
             <i class="fa-light fa-reply"></i>
             </header>
             <div class="ladex">
-                <a href="./pagina_inicial.html"><h2>Hotelex</h2></a> <br>
+                <a href="../php/sistema.php"><h2>Hotelex</h2></a> <br>
                 <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA<BR> INESQUECÍVEL!</span>
                     
                 <ul> 
