--- a/hotelex/assets/html/dados_propri.html
+++ b/hotelex/assets/html/dados_propri.html
@@ -15,7 +15,7 @@
   <form action="../php/dados_propri.php" method="POST" enctype="multipart/form-data">
     <div class="produto-container">
       <div class="ladex">
-        <a href="./pagina_inicial.html"><h2-2>Hotelex</h2-2></a> <br>
+        <a href="../php/sistema.php"><h2-2>Hotelex</h2-2></a> <br>
         <span>RESERVE SEU REFÚGIO PERFEITO, ONDE CADA ESTADIA SE TORNA UMA EXPERIÊNCIA INESQUECÍVEL!</span>
       </div>
       <div class='container'>
@@ -131,7 +131,7 @@
           </div>
         </div>
       </div>
-      <script>
+      <!-- <script>
         document.addEventListener('DOMContentLoaded', function () {
           // Aguarda o carregamento completo do DOM
           var botaoCadastrar = document.querySelector('.submitex');
@@ -141,7 +141,7 @@
             window.location.href = 'pagamentex.html';
           });
         });
-      </script>
+      </script> -->
       <script src="../js/dados_propri.js"></script>
     </div>
   </form>
